<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/draw_title_group_tracking">
        <menu>
            <item
                android:id="@+id/nav_track"
                android:icon="@drawable/ic_draw_tracking"
                android:title="@string/draw_tracking_track" />
            <item
                android:id="@+id/nav_track_list"
                android:icon="@drawable/ic_draw_tracklist"
                android:title="@string/draw_tracking_list" />
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
