<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.wildapp.android.wildtrack.view.activities.AddTrackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/add_track_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/field_track_title"
                android:inputType="textCapSentences"
                android:textColor="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/add_track_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/field_track_number"
                android:inputType="textCapCharacters"
                android:textColor="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filed_track_courier"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/add_couriers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/add_track_number_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_track_add"
            android:theme="@style/ButtonPrimary" />

        <Button
            android:id="@+id/add_track_number_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:theme="@style/ButtonAccent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
